edit favicon, add tooltips to head-to-read headings

--- a/tma/cast/institute.html
+++ b/tma/cast/institute.html
@@ -51,7 +51,7 @@
       <nav>
         <div><a href="../season/" class="title">Seasons</a></div>
         <div class="subtitle">The Institute's Personnel</div>
-        <div><a href="recurring" class="subtitle">Recurring Characters</a></div>
+        <div><a href="notable" class="subtitle">Notable Characters</a></div>
         <div><a href="minor" class="subtitle">Minor Characters</a></div>
       </nav>
     </section>
@@ -125,7 +125,7 @@
           <nav>
               <div><a href="../season/" class="title">Seasons</a></div>
               <div class="subtitle">The Institute's Personnel</div>
-              <div><a href="recurring" class="subtitle">Recurring Characters</a></div>
+              <div><a href="notable" class="subtitle">Notable Characters</a></div>
               <div><a href="minor" class="subtitle">Minor Characters</a></div>
           </nav>
         </section>
@@ -148,7 +148,11 @@
       </section>
       <section>
         <div id="Employees">
-          <h2>Employees</h2>
+          <h2>
+            <span tooltip="Employees" tooltip-position="bottom">
+              Employees
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
@@ -160,7 +164,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Jonathan Sims</p></span>
-                      <p class="ds">the Archive<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">the Archive<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -178,7 +182,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Martin Blackwood</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -196,7 +200,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Elias Bouchard</p></span>
-                      <p class="ds">Head of Institute<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">Head of Institute<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -214,7 +218,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Jonah Magnus</p></span>
-                      <p class="ds">the Heart & Founder<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">the Heart & Founder<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -232,7 +236,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Alice Tonner</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -250,7 +254,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Basira Hussain</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -263,7 +267,11 @@
       </section>
       <section>
         <div id="Major-Formers">
-          <h2>Major Former Employees</h2>
+          <h2>
+            <span tooltip="Major Former Employees" tooltip-position="bottom">
+              Major Former Employees
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
@@ -275,7 +283,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Timothy Stoker</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -293,7 +301,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Sasha James</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -311,7 +319,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Gertrude Robinson</p></span>
-                      <p class="ds">Archivist<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">Archivist<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -329,7 +337,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Michael Shelley</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -342,7 +350,11 @@
       </section>
       <section>
         <div id="Former">
-          <h2>Former Employees</h2>
+          <h2>
+            <span tooltip="Former Employees" tooltip-position="bottom">
+             Former Employees
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
@@ -354,7 +366,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Eric Delano</p></span>
-                      <p class="ds">Archival assistant<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
