--- a/tma/cast/notable.html
+++ b/tma/cast/notable.html
@@ -4,7 +4,7 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>TMagP: recurring characters</title>
+    <title>TMA: notable characters</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
       <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,49 +47,26 @@
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
         <div><a href="../season/" class="title">Seasons</a></div>
-        <div><a href="oiar" class="subtitle">O.I.A.R. Employees</div>
-        <div class="subtitle">Recurring Characters</div>
-        <div><a href="minor" class="subtitle">Minor Characters</a></div>
+        <div><a href="../cast/" class="title">Characters</a></div>
+        <div><a href="../002" class="subtitle">Next Episode</a></div>
       </nav>
     </section>
   </aside>
 
   <aside class="navbar bar page small" id="nav-small-p">
     <section>
-      <h6>Recurring Characters</h6>
-      <nav>
-      </nav>
+        <h6></h6>
+        <nav>
+          <div><a href="/" class="title"></a></div>
+          <div><a href="/" class="subtitle"></a></div>
+        </nav>
     </section>
   </aside>
   <div id="navhelper"></div>
 
-  <!-- CHARACTER MODALS -->
-  <dialog id="Ink5oul">
-    <div class="modal">
-      <span class="h3"><h3>Ink5oul</h3></span>
-        <button class="close-modal" aria-label="Close modal" onclick="inkClose()">
-          <i class="ph-duotone ph-cpu"></i>
-        </button>
-
-
-    </div>
-  </dialog>
-  <dialog id="Needles">
-    <div class="modal">
-      <span class="h3"><h3>Needles</h3></span>
-        <button class="close-modal" aria-label="Close modal" onclick="needleClose()">
-          <i class="ph-duotone ph-cpu"></i>
-        </button>
-
-
-    </div>
-  </dialog>
-  <!-- //////////////// -->
-
-  <!-- THE MAIN PAGE -->
   <main>
     <aside>
       <div class="site navbar toggle" id="btn-div-s">
@@ -107,19 +84,20 @@
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
-            <div><a href="../season/" class="title">Seasons</a></div>
-            <div><a href="oiar" class="subtitle">O.I.A.R. Employees</a></div>
-            <div class="subtitle">Recurring Characters</div>
-            <div><a href="minor" class="subtitle">Minor Characters</a></div>
+              <div><a href="../season/" class="title">Seasons</a></div>
+              <div><a href="../cast/" class="title">Characters</a></div>
+              <div><a href="../002" class="subtitle">Next Episode</a></div>
           </nav>
         </section>
       </aside>
       <aside class="navbar bar big page" id="nav-big-p">
         <section>
-          <h6>Recurring Characters</h6>
+          <h6></h6>
           <nav>
+            <div><a href="/" class="title"></a></div>
+            <div><a href="/" class="subtitle"></a></div>
           </nav>
         </section>
       </aside>
@@ -127,58 +105,25 @@
 
     <article>
       <section class="synopsis">
-        <h4>Non Vacillabimus</h4>
+        <h4></h4>
       </section>
       <section>
-        <div id="Prominent">
-          <h2>Characters</h2>
+        <div id="Statement">
+          <h2></h2>
         </div>
       </section>
-      <section class="cardsel">
-        <div class="cardwrap">
-          <div class="cards">
-            <div class="cards-item">
-              <div class="card">
-                <button onclick="inkShow()">
-                  <div class="card-content">
-                    <div class="card-text">
-                      <span class="names"><p class="name">Ink5oul</p></span>
-                      <p class="ds">tattooist<span class="hsh">-/-</span>they/them</p>
-                        <hr>
-                      <p class="lm">learn more.</p>
-                    </div>
-                  </div>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="cardwrap">
-          <div class="cards">
-            <div class="cards-item">
-              <div class="card">
-                <button onclick="needleShow()">
-                  <div class="card-content">
-                    <div class="card-text">
-                      <span class="names"><p class="name">Needles</p></span>
-                      <p class="ds">???<span class="hsh">-/-</span>he/him</p>
-                        <hr>
-                      <p class="lm">learn more.</p>
-                    </div>
-                  </div>
-                </button>
-              </div>
-            </div>
-          </div>
+      <section class="cluster">
+        <div>
+          <p class="analysis">
+          </p>
         </div>
       </section>
-      <section class="quote">
-        <h4>Fear takes many forms.</h4>
-      </section>
+      <!--<section class="quote">
+        <h4></h4>
+      </section>-->
     </article>
   </main>
 
   <script src="/js/global.js"></script>
-  <script src="/js/modalTMP.js"></script>
 </body>
 </html>
