--- a/tma/fears.html
+++ b/tma/fears.html
@@ -50,7 +50,7 @@
     <section>
       <h6>TMA</h6>
       <nav>
-        <div><a href="season/" class="title">Seasons</a></div>
+        <div><a href="../season/" class="title">Seasons</a></div>
         <div><a href="cast/" class="title">Characters</a></div>
       </nav>
     </section>
@@ -276,7 +276,7 @@
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="season/" class="title">Seasons</a></div>
+              <div><a href="../season/" class="title">Seasons</a></div>
               <div><a href="cast/" class="title">Characters</a></div>
           </nav>
         </section>
@@ -316,7 +316,11 @@
       </section>
       <section>
         <div id="Introduction">
-          <h2>Introduction</h2>
+          <h2>
+            <span tooltip="Introduction" tooltip-position="bottom">
+              Introduction
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cluster">
