--- a/tmagp/cast/index.html
+++ b/tmagp/cast/index.html
@@ -4,7 +4,7 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>TMagP: characters</title>
+    <title>TMagP: cast of characters</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
       <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
     </section>
 
     <section>
-      <h1></h1>
+      <h1>tmagp: cast of characters</h1>
     </section>
     
     <section class="page navbar toggle">
@@ -57,7 +57,7 @@
 
   <aside class="navbar bar page small" id="nav-small-p">
     <section>
-        <h6></h6>
+        <h6>TMagP: Cast of Characters</h6>
         <nav>
           <div><a href="/" class="title"></a></div>
           <div><a href="/" class="subtitle"></a></div>
@@ -92,7 +92,7 @@
       </aside>
       <aside class="navbar bar big page" id="nav-big-p">
         <section>
-          <h6></h6>
+          <h6>TMagP: Cast of Characters</h6>
           <nav>
             <div><a href="/" class="title"></a></div>
             <div><a href="/" class="subtitle"></a></div>
@@ -103,22 +103,76 @@
 
     <article>
       <section class="synopsis">
-        <h4></h4>
+        <h4>Non Vacillabimus.</h4>
       </section>
       <section>
         <div id="">
-          <h2></h2>
+          <h2>
+            <span tooltip="Go to..." tooltip-position="bottom">
+             Go to...
+            </span>
+          </h2>
         </div>
       </section>
-      <section class="cluster">
-        <div>
-          <p class="analysis">
-          </p>
+      <section class="cardsel">
+        <div class="cardwrap">
+          <a href="oiar">
+            <div class="cards">
+              <div class="cards-item">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-text">
+                      <span class="names"><p class="name">O.I.A.R. Staff</p></span>
+                      <h5 class="ds">Office of Incident Assessment & Response Staff</h5>
+                        <hr>
+                      <p class="lm">see characters.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="cardwrap">
+          <a href="notable">
+            <div class="cards">
+              <div class="cards-item">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-text">
+                      <span class="names"><p class="name">Recurring</p></span>
+                      <h5 class="ds">Notable Characters</h5>
+                        <hr>
+                      <p class="lm">see characters.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="cardwrap">
+          <a href="minor">
+            <div class="cards">
+              <div class="cards-item">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-text">
+                      <span class="names"><p class="name">Minor</p></span>
+                      <h5 class="ds">Minor Characters</h5>
+                        <hr>
+                      <p class="lm">see characters.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
       </section>
-      <!--<section class="quote">
-        <h4></h4>
-      </section>-->
+      <section class="quote">
+        <h4>Fear takes many forms.</h4>
+      </section>
     </article>
   </main>
 
