--- a/tmagp/cast/oiar.html
+++ b/tmagp/cast/oiar.html
@@ -51,7 +51,7 @@
       <nav>
         <div><a href="../season/" class="title">Seasons</a></div>
         <div class="subtitle">O.I.A.R. Employees</div>
-        <div><a href="recurring" class="subtitle">Recurring Characters</a></div>
+        <div><a href="notable" class="subtitle">Notable Characters</a></div>
         <div><a href="minor" class="subtitle">Minor Characters</a></div>
       </nav>
     </section>
@@ -220,7 +220,7 @@
           <nav>
             <div><a href="../season/" class="title">Seasons</a></div>
             <div class="subtitle">O.I.A.R. Employees</div>
-            <div><a href="recurring" class="subtitle">Recurring Characters</a></div>
+            <div><a href="notable" class="subtitle">Notable Characters</a></div>
             <div><a href="minor" class="subtitle">Minor Characters</a></div>
           </nav>
         </section>
@@ -256,7 +256,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Samama Khalid</p></span>
-                      <p class="ds">employee<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">employee<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -274,7 +274,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Alice Dyer</p></span>
-                      <p class="ds">employee<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">employee<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -292,7 +292,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Gwendolyn Bouchard</p></span>
-                      <p class="ds">externals liason<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">externals liason<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -310,7 +310,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Celia Ripley</p></span>
-                      <p class="ds">employee<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">employee<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -328,7 +328,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Lena Kelley</p></span>
-                      <p class="ds">direct manager<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">direct manager<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -346,7 +346,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Colin Becher</p></span>
-                      <p class="ds">I.T. manager<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">I.T. manager<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -371,7 +371,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Mr. Bonzo</p></span>
-                      <p class="ds">external<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">external<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -389,7 +389,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Lady Mowbray</p></span>
-                      <p class="ds">external<span class="hsh">-/-</span>she/her</p>
+                      <p class="ds">external<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -414,7 +414,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Teddy Vaughn</p></span>
-                      <p class="ds">employee<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">employee<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -432,7 +432,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Klaus</p></span>
-                      <p class="ds">I.T. manager<span class="hsh">-/-</span>he/him</p>
+                      <p class="ds">I.T. manager<span class="hsh">&sect;</span>he/him</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -457,7 +457,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">FR3-d1</p></span>
-                      <p class="ds">algorithm<span class="hsh">-/-</span>N/A</p>
+                      <p class="ds">algorithm<span class="hsh">&sect;</span>N/A</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -475,7 +475,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">NORRIS</p></span>
-                      <p class="ds">text-to-speech<span class="hsh">-/-</span>N/A</p>
+                      <p class="ds">text-to-speech<span class="hsh">&sect;</span>N/A</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -493,7 +493,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">CHESTER</p></span>
-                      <p class="ds">text-to-speech<span class="hsh">-/-</span>N/A</p>
+                      <p class="ds">text-to-speech<span class="hsh">&sect;</span>N/A</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
@@ -511,7 +511,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">AUGUSTUS</p></span>
-                      <p class="ds">text-to-speech<span class="hsh">-/-</span>N/A</p>
+                      <p class="ds">text-to-speech<span class="hsh">&sect;</span>N/A</p>
                         <hr>
                       <p class="lm">learn more.</p>
                     </div>
