--- a/tmagp/index.html
+++ b/tmagp/index.html
@@ -49,7 +49,7 @@
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="season/" class="title">Seasons</a></div>
+        <div><a href="../season/" class="title">Seasons</a></div>
         <div><a href="cast/" class="title">Characters</a></div>
       </nav>
     </section>
@@ -59,12 +59,12 @@
     <section>
         <h6>the Magnus Protocol.</h6>
         <nav>
-          <div><a href="season/" class="title">Seasons</a></div>
-          <div><a href="season/1" class="subtitle">Season One</a></div>
+          <div><a href="../season/" class="title">Seasons</a></div>
+          <div><a href="../season/1" class="subtitle">Season One</a></div>
             <hr>
           <div><a href="cast/" class="title">Characters</a></div>
           <div><a href="cast/oiar" class="subtitle">O.I.A.R. Staff</a></div>
-          <div><a href="cast/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="cast/notable" class="subtitle">Notable</a></div>
           <div><a href="cast/minor" class="subtitle">Others</a></div>
         </nav>
       </section>
@@ -90,7 +90,7 @@
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="season/" class="title">Seasons</a></div>
+              <div><a href="../season/" class="title">Seasons</a></div>
               <div><a href="cast/" class="title">Characters</a></div>
           </nav>
         </section>
@@ -99,12 +99,12 @@
         <section>
           <h6>the Magnus Protocol.</h6>
           <nav>
-            <div><a href="season/" class="title">Seasons</a></div>
-            <div><a href="season/1" class="subtitle">Season One</a></div>
+            <div><a href="../season/" class="title">Seasons</a></div>
+            <div><a href="../season/1" class="subtitle">Season One</a></div>
               <hr>
             <div><a href="cast/" class="title">Characters</a></div>
             <div><a href="cast/oiar" class="subtitle">O.I.A.R. Staff</a></div>
-            <div><a href="cast/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="cast/notable" class="subtitle">Notable</a></div>
             <div><a href="cast/minor" class="subtitle">Others</a></div>
           </nav>
         </section>
@@ -117,7 +117,11 @@
       </section>
       <section>
         <div id="Statement">
-          <h2>Introduction</h2>
+          <h2>
+            <span tooltip="Introduction" tooltip-position="bottom">
+              Introduction
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cluster">
