--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <section>
         <div>
           <h2>
-            <span tooltip="Introduction" tooltip-position="left">
+            <span tooltip="Introduction" tooltip-position="bottom">
               Introduction
             </span>
           </h2>
