--- a/tma/index.html
+++ b/tma/index.html
@@ -49,7 +49,7 @@
     <section>
       <h6>TMA</h6>
       <nav>
-          <div><a href="season/" class="title">Seasons</a></div>
+          <div><a href="../season/" class="title">Seasons</a></div>
           <div><a href="cast/" class="title">Characters</a></div>
           <div><a href="fears" class="subtitle">Entities</a></div>
       </nav>
@@ -69,7 +69,7 @@
             <hr>
           <div class="title">Characters</div>
           <div><a href="cast/institute" class="subtitle">Institute Employees</a></div>
-          <div><a href="cast/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="cast/notable" class="subtitle">Notable</a></div>
           <div><a href="cast/minor" class="subtitle">Other</a></div>
             <hr>
           <div><a href="fears" class="title">Entities</a></div>
@@ -97,7 +97,7 @@
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="season/" class="title">Seasons</a></div>
+              <div><a href="../season/" class="title">Seasons</a></div>
               <div><a href="cast/" class="title">Characters</a></div>
               <div><a href="fears" class="subtitle">Entities</a></div>
           </nav>
@@ -116,7 +116,7 @@
               <hr>
             <div class="title">Characters</div>
             <div><a href="cast/institute" class="subtitle">Institute Employees</a></div>
-            <div><a href="cast/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="cast/notable" class="subtitle">Notable</a></div>
             <div><a href="cast/minor" class="subtitle">Other</a></div>
               <hr>
             <div><a href="fears" class="title">Entities</a></div>
@@ -131,7 +131,11 @@
       </section>
       <section>
         <div id="Statement">
-          <h2>Introduction</h2>
+          <h2>
+            <span tooltip="Introduction" tooltip-position="bottom">
+              Introduction
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cluster">
