add mag001: angler fish miscellaneous edits

--- a/tma/fears.html
+++ b/tma/fears.html
@@ -212,12 +212,93 @@
 </dialog>
 <dialog id="Stranger">
   <div class="modal">
-    <span class="h3"><h3>The Stranger</h3></span>
+    <div class="scroll">
+      <span class="h3"><h3>The Stranger</h3></span>
       <button class="close-modal" aria-label="Close modal" onclick="strangerClose()">
         <i class="ph-duotone ph-cpu"></i>
       </button>
-    <h5><i>also known as<b>:</b></i> <span class="nickname">I Do Not Know You</span>.</h5>
+      
+      <h5><i>also known as<b>:</b></i> <span class="nickname">I Do Not Know You</span>.</h5>
+      <section>
+        <h2>
+          <span tooltip="Details" tooltip-position="bottom">
+            Details
+          </span>
+        </h2>
+        <section class="cluster">
+          <h3>
+            <span tooltip="Fears" tooltip-position="right">
+              fears:
+            </span>
+          </h3>
+          <div class="analysis">
+            <p class="analysis">
+              the unknown, the unfamiliar; something being &ldquo;off&rdquo; in ways difficult to put into words. 
+              <span class="tooltip"><span
+                tooltip="the fear of human-like figures such as ventriloquist's dummies, animatronic creatures, wax statues or anything that represents a being that appears to have feelings or perceptions."
+                tooltip-position="right">
+                automatonaphobia
+              </span></span>.
+            </p>
+          </div>
+        </section>
+        <section class="cluster">
+          <h3>
+            <span tooltip="Themes" tooltip-position="right">
+              themes:
+            </span>
+          </h3>
+          <div class="analysis">
+            <p class="analysis">
+              an inherent feeling of &ldquo;wrongness.&rdquo;
+            </p>
+          </div>
+        </section>
+        <section class="cluster">
+          <h3>
+            <span tooltip="Manifestations" tooltip-position="right">
+              manifestations:
+            </span>
+          </h3>
+          <div class="analysis">
+            <p class="analysis">
 
+            </p>
+          </div>
+        </section>
+      </section>
+    <section>
+      <h2>
+        <span tooltip="Characters & Artifacts" tooltip-position="bottom">
+          Characters & Artifacts
+        </span>
+      </h2>
+      <section class="cluster">
+        <h3>
+          <span tooltip="Servants" tooltip-position="right">
+            servants:
+          </span>
+        </h3>
+        <div class="analysis">
+          <p class="analysis">
+            The Angler Fish. NotThem.
+          </p>
+        </div>
+      </section>
+      <section class="cluster">
+        <h3>
+          <span tooltip="Avatars" tooltip-position="right">
+            avatars:
+          </span>
+        </h3>
+        <div class="analysis">
+          <p class="analysis">
+            Nikola Orsinov.
+          </p>
+        </div>
+      </section>
+    </section>
+    </div>
   </div>
 </dialog>
 <dialog id="Vast">
