--- a/tma/season/1.html
+++ b/tma/season/1.html
@@ -132,7 +132,7 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">MAG<span class="nmbr">001</span></p></span>
-                      <h5 class="ds">Anglerfish</h5>
+                      <h5 class="ds">Angler Fish</h5>
                         <hr>
                       <p class="lm">go to episode.</p>
                     </div>
